--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:e2e": "playwright test",
+    "test:e2e:debug": "playwright test --debug"
   },
   "eslintConfig": {
     "extends": [
@@ -43,9 +45,12 @@
     ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
+    "eslint": "^8.57.1",
+    "eslint-plugin-playwright": "^1.7.0",
     "typescript": "4.9.5"
   }
 }
