--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,9 @@
   },
   "scripts": {
     "prestart": "npm install",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "test:e2e": "playwright test",
     "test:e2e:debug": "playwright test --debug"
@@ -45,12 +45,15 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "@playwright/test": "^1.48.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "eslint": "^8.57.1",
+    "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-playwright": "^1.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "4.9.5"
   }
 }
